Update README.md and add application configuration file for different environment

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -3,7 +3,11 @@ name: Main Branch Deployment
 on:
   push:
     branches:
-      - 'min_branch'
+      - 'main'
+
+  pull_request:
+    branches:
+      - 'main'
 
 jobs:
   build:
