Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -6,7 +6,7 @@
   },
   "item": [
     {
-      "name": "New Folder",
+      "name": "Country API",
       "item": [],
       "id": "47d7424c-d2c7-4595-904a-b24266574285"
     }
