Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -7,7 +7,21 @@
   "item": [
     {
       "name": "Country API",
-      "item": [],
+      "item": [
+        {
+          "name": "New Request",
+          "id": "d6a6b48c-7064-4be9-8393-7466f9fd5d87",
+          "protocolProfileBehavior": {
+            "disableBodyPruning": true
+          },
+          "request": {
+            "method": "GET",
+            "header": [],
+            "url": null
+          },
+          "response": []
+        }
+      ],
       "id": "47d7424c-d2c7-4595-904a-b24266574285"
     }
   ]
