Fixed cities endpoint & ignore app.dev.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 8011
 spring:
   profiles:
-    active: prod
+    active: dev
   application:
     name: EA Final Project
   datasource:
