--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,4 +6,4 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cs544
     username: root
-    password: P@ssw0rd
+    password: r@ymond100
