--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,7 +1,7 @@
 server:
   port: 8011
 countrystatecity:
-  forceUpdate: false
+  forceUpdate: true
 spring:
   application:
     name: EA Final Project
@@ -12,4 +12,4 @@ spring:
   jpa:
     show-sql: false
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: create
