--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,6 +4,14 @@ spring:
   application:
     name: EA Final Project (Dev)
   datasource:
-    url: jdbc:mysql://localhost:3306/cs544
-    username: ray
-    password:
+    url: 'jdbc:postgresql://localhost:5432/cs544'
+    username: 'root'
+    password: 'CS544-EA'
+    driver-class-name: org.postgresql.Driver
+    hikari:
+      maximum-pool-size: 5
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
