--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,6 @@
 server:
   port: 8011
 spring:
-  profiles:
-    active: dev
   application:
     name: EA Final Project
   datasource:
@@ -15,10 +13,9 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: create
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+      ddl-auto: update
+
+security:
+  jwt:
+    secretkey: secret-key
+    timeout-millis: 3600000 #1 hr
