Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -9,7 +9,7 @@
       "name": "Country API",
       "item": [
         {
-          "name": "New Request",
+          "name": "Get Country With Paging",
           "id": "d6a6b48c-7064-4be9-8393-7466f9fd5d87",
           "protocolProfileBehavior": {
             "disableBodyPruning": true
