Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -45,7 +45,7 @@
       "id": "47d7424c-d2c7-4595-904a-b24266574285"
     },
     {
-      "name": "New Folder",
+      "name": "Admin",
       "item": [],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47"
     }
