Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -50,7 +50,7 @@
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47"
     },
     {
-      "name": "New Folder",
+      "name": "Student",
       "item": [],
       "id": "dcdfa125-372c-481b-8c7b-f5f5b169d66f"
     }
