Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -46,6 +46,11 @@
             }
           ],
           "id": "47d7424c-d2c7-4595-904a-b24266574285"
+        },
+        {
+          "name": "New Folder",
+          "item": [],
+          "id": "f4137316-f73a-4ff7-912f-a338e0097d04"
         }
       ],
       "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47"
