Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -48,7 +48,7 @@
           "id": "47d7424c-d2c7-4595-904a-b24266574285"
         },
         {
-          "name": "New Folder",
+          "name": "Course",
           "item": [],
           "id": "f4137316-f73a-4ff7-912f-a338e0097d04"
         }
