Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -83,7 +83,8 @@
           "id": "f4137316-f73a-4ff7-912f-a338e0097d04"
         }
       ],
-      "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47"
+      "id": "4fe13d3f-00fe-4ef8-a3a8-2ab339b66c47",
+      "description": "API Collection which can only access by **Admin**"
     },
     {
       "name": "Student",
@@ -115,12 +116,12 @@
   ],
   "variable": [
     {
-      "id": "edcebed8-8f6e-4d7a-a841-ffaab3138e57",
+      "id": "04afa649-847f-41ee-a027-f01aa6b578e8",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "c4c77980-060e-4245-959a-fb628e9b7153",
+      "id": "ba3bf0ae-7019-4b25-bf93-b82eccd0510b",
       "key": "port",
       "value": "8010"
     }
