Postman updated CourseRegistrationEAFinalProject

--- a/Postman Collections/CourseRegistrationEAFinalProject.json
+++ b/Postman Collections/CourseRegistrationEAFinalProject.json
@@ -91,7 +91,8 @@
     {
       "name": "Student",
       "item": [],
-      "id": "dcdfa125-372c-481b-8c7b-f5f5b169d66f"
+      "id": "dcdfa125-372c-481b-8c7b-f5f5b169d66f",
+      "description": "API Collection which can only access by **Student**"
     }
   ],
   "event": [
@@ -118,12 +119,12 @@
   ],
   "variable": [
     {
-      "id": "80ece9ec-3489-49a2-948d-968d4be57d4c",
+      "id": "aefd8b1a-aa94-4394-a66e-e0802bfbc6c9",
       "key": "baseURL",
       "value": "localhost"
     },
     {
-      "id": "b91c2eec-901a-4459-9e90-a3111101a5ba",
+      "id": "506986f9-477b-4584-a12d-3e1f4c16c32c",
       "key": "port",
       "value": "8010"
     }
